# SelfMonitor

./: .cursorignore  .env.development  .env.development.example  .env.example  .env.prod.example  .env.staging.example  .flake8  .gitattributes  .gitignore  .pylintrc  .secrets.example.ps1  AGENTS.md  AI_AGENT_IMPLEMENTATION_PLAN.txt  ALL_ERRORS_FIXED_COMPLETE_REPORT.md  AUTH_SERVICE_CHANGES.txt  BANK_SYNC_ECONOMICS.md  CLIENT_ONE_PAGER_FOR_CLIENT.txt  CLIENT_ONE_PAGER_FOR_CLIENT_RU.txt  CLIENT_READY_SUMMARY.txt  COMPREHENSIVE_PROJECT_AUDIT_2026.txt  CRITICAL_ISSUES_FIXED_REPORT.md  CURSOR_CHANGES_APPLIED_COMPLETE.md  CURSOR_INTEGRATION_COMPLETE.md  DAILY_REPORT_2026-02-19.txt  DAILY_REPORT_2026-02-20.txt  DEMO_SCRIPT_RU.txt  DEVELOPMENT_ENVIRONMENT_COMPLETE.md  DEV_SETUP.md  DR_GAPS_ANALYSIS.md  ENTERPRISE_GRADE_DR_ANALYSIS.md  ERROR_FIX_REPORT.md  EXECUTIVE_AUDIT_SUMMARY.txt  FINAL_SUCCESS_SUMMARY.txt  FINAL_TECHNICAL_ANALYSIS.txt  GRAPHQL_FEDERATION_COMPLETE.md  INVOICE_SERVICE_COMPLETION_SUCCESS.md  INVOICE_SERVICE_TODO_COMPLETION.md  KUBERNETES_MIGRATION_COMPLETION_REPORT.md  LICENSE  LINTING_RULES.md  (+73 more)
services/invoice-service/: .dockerignore  Dockerfile  __init__.py  alembic.ini  pyproject.toml  requirements.txt
services/invoice-service/alembic/: env.py
services/invoice-service/alembic/versions/: 001_initial_invoice_schema.py  002_stripe_invoice_payment_links.py
services/invoice-service/app/: __init__.py  crud.py  database.py  init_templates.py  invoice_calculator.py  invoice_smtp.py  main.py  models.py  notify_finops.py  pdf_generator.py  reporting_service.py  schemas.py  stripe_invoice.py  sync_service.py
services/invoice-service/app/templates/: consultant_invoice.html  default_invoice.html  designer_invoice.html  (+1 more)
services/invoice-service/tests/: conftest.py  test_clients.py  test_health.py  test_invoice_validation.py  test_main.py
(+956 files in other folders)
